examples/test/testpolicy4591.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4591
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key6: value39
      key48: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value32
          key29: value45
      podSelector:
        matchLabels:
          key43: value45
